# LimaPay

./: .gitignore  README.md  generador_qrs.py  main.py  pyproject.toml  requirements.txt
backend/: __init__.py  config_db.py  dao_pasajeros.py  dao_transacciones.py  main.py  qr_seguridad.py
database/: migracion_v2.sql  schema.sql
frontend/components/: alertas.py  tarjeta_movimiento.py
frontend/core/: ui.py
frontend/tema/: temas.py
frontend/views/: dashboard_view.py  historial_view.py  home_view.py  login_view.py  perfil_view.py  recarga_view.py  recuperar_clave_view.py  register_view.py  scanner_view.py
